@@ -4,13 +4,22 @@ import io.smallrye.mutiny.Uni;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
-import java.util.Collections;
 import java.util.List;
 
 @Path("/tokentypes")
 public class TokenType {
     @GET
     public Uni<List<String>> getTokenTypes(){
-        return Uni.createFrom().item(Collections.emptyList()); // TODO - query db
+        return Uni.createFrom().item(getAllTokenTypes());
+    }
+
+    private static List<String> getAllTokenTypes(){
+        return List.of(
+                "TypeDate",
+                "TypeDatetime",
+                "TypeIPv4",
+                "TypeIPv6",
+                "TypeTime"
+        );
     }
 }
